website/versioned_docs/version-2.11.x/reference/subsystems/python-infer.mdx
---
title: python-infer
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options controlling which dependencies will be inferred for Python targets.

Backend: <span className="color--primary">`pants.backend.python`</span>

Config section: <span className="color--primary">`[python-infer]`</span>

<span className={styles.options}>

## Basic options

### `imports`

<Option
  cli_repr={`--[no-]python-infer-imports`}
  env_repr='PANTS_PYTHON_INFER_IMPORTS'
  default_repr={`True`}
>
Infer a target&#x27;s imported dependencies by parsing import statements from sources.

To ignore a false positive, you can either put `# pants: no-infer-dep` on the line of the import or put `!{bad_address}` in the `dependencies` field of your target.

</Option>

### `string_imports`

<Option
  cli_repr={`--[no-]python-infer-string-imports`}
  env_repr='PANTS_PYTHON_INFER_STRING_IMPORTS'
  default_repr={`False`}
>
Infer a target&#x27;s dependencies based on strings that look like dynamic dependencies, such as Django settings files expressing dependencies as strings.

To ignore any false positives, put `!{bad_address}` in the `dependencies` field of your target.

</Option>

### `string_imports_min_dots`

<Option
  cli_repr={`--python-infer-string-imports-min-dots=<int>`}
  env_repr="PANTS_PYTHON_INFER_STRING_IMPORTS_MIN_DOTS"
  default_repr={`2`}
>
  If --string-imports is True, treat valid-looking strings with at least this
  many dots in them as potential dynamic dependencies. E.g., `'foo.bar.Baz'`
  will be treated as a potential dependency if this option is set to 2 but not
  if set to 3.
</Option>

### `assets`

<Option
  cli_repr={`--[no-]python-infer-assets`}
  env_repr="PANTS_PYTHON_INFER_ASSETS"
  default_repr={`False`}
>
  Infer a target&#x27;s asset dependencies based on strings that look like Posix
  filepaths, such as those given to `open` or `pkgutil.get_data`. To ignore any
  false positives, put `!{bad_address}` in the `dependencies` field of your
  target.
</Option>

### `assets_min_slashes`

<Option
  cli_repr={`--python-infer-assets-min-slashes=<int>`}
  env_repr="PANTS_PYTHON_INFER_ASSETS_MIN_SLASHES"
  default_repr={`1`}
>
  If --assets is True, treat valid-looking strings with at least this many
  forward slash characters as potential assets. E.g. `'data/databases/prod.db'`
  will be treated as a potential candidate if this option is set to 2 but not to
  3.
</Option>

### `inits`

<Option
  cli_repr={`--[no-]python-infer-inits`}
  env_repr='PANTS_PYTHON_INFER_INITS'
  default_repr={`False`}
>
Infer a target&#x27;s dependencies on any `__init__.py` files in the packages it is located in (recursively upward in the directory structure).

Even if this is disabled, Pants will still include any ancestor `__init__.py` files, only they will not be &#x27;proper&#x27; dependencies, e.g. they will not show up in `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 dependencies` and their own dependencies will not be used.

If you have empty `__init__.py` files, it&#x27;s safe to leave this option off; otherwise, you should enable this option.

</Option>

### `conftests`

<Option
  cli_repr={`--[no-]python-infer-conftests`}
  env_repr="PANTS_PYTHON_INFER_CONFTESTS"
  default_repr={`True`}
>
  Infer a test target&#x27;s dependencies on any conftest.py files in the
  current directory and ancestor directories.
</Option>

### `entry_points`

<Option
  cli_repr={`--[no-]python-infer-entry-points`}
  env_repr="PANTS_PYTHON_INFER_ENTRY_POINTS"
  default_repr={`True`}
>
  Infer dependencies on targets&#x27; entry points, e.g. `pex_binary`&#x27;s
  `entry_point` field, `python_awslambda`&#x27;s `handler` field and
  `python_distribution`&#x27;s `entry_points` field.
</Option>

### `unowned_dependency_behavior`

<Option
  cli_repr={`--python-infer-unowned-dependency-behavior=<UnownedDependencyUsage>`}
  env_repr='PANTS_PYTHON_INFER_UNOWNED_DEPENDENCY_BEHAVIOR'
  one_of='error, warning, ignore'
  default_repr={`ignore`}
>
How to handle imports that don&#x27;t have an inferrable owner.

Usually when an import cannot be inferred, it represents an issue like Pants not being properly configured, e.g. targets not set up. Often, missing dependencies will result in confusing runtime errors like `ModuleNotFoundError`, so this option can be helpful to error more eagerly.

To ignore any false positives, either add `# pants: no-infer-dep` to the line of the import or put the import inside a `try: except ImportError:` block.

</Option>

## Advanced options

None

## Deprecated options

None

</span>

